# kafka-python-poc

./: README.md  package.json  pyproject.toml
aiokafka/example-1/: consumer.py  producer.py
aiokafka/example-2/: README.md  consumer.py  producer.py
aiokafka/example-3/: consumer.py  producer.py
aiokafka/example-cunsumer-offset/: README.md  consumer.py  producer.py
docs/: README.md  install-kafka-osx.md
docs/.vuepress/: config.js
