[tool.poetry]
name = "kafka-python-poc"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <yoophi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiokafka = "^0.7.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
